@@ -1,3 +1,8 @@
+2015-02-09 belangeo <belangeo@gmail.com>
+
+    * Added a reset method to the Looper objet.
+    - rev 1294
+
 2015-02-08 belangeo <belangeo@gmail.com>
 
     * E-Pyo: Added a refresh button to actualize the content of the folder panel.
